--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 BOT_TOKEN=6488885079:AAGz7bp7Gl-NWn7GsV5TfutJ7snjDA1Vmrk
 ADMIN_ID=1521314431
+BANNED_USERS_IDS=6488885079, 3412514351, 54315114532
 USE_REDIS=False
 
 DB_USER=exampleDBUserName
