Fixed a bugs related to Throttling MiddleWare.Added a new acl-MiddleWare.

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 BOT_TOKEN=6488885079:AAGz7bp7Gl-NWn7GsV5TfutJ7snjDA1Vmrk
-ADMIN_ID=1521314431
+ADMIN_IDS=1521314431,1962146517
 BANNED_USERS_IDS=6488885079, 3412514351, 54315114532
 USE_REDIS=False
 
