Added new MiddleWare

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BOT_TOKEN=6488885079:AAGz7bp7Gl-NWn7GsV5TfutJ7snjDA1Vmrk
-ADMIN_IDS=1521314431,1962146517
+BOT_TOKEN=6488885432:Your_token
+ADMIN_IDS=insert_here_admin_ids_with_comma_as_separator
 BANNED_USERS_IDS=6488885079, 3412514351, 54315114532
 USE_REDIS=False
 
