Added a new Handler for procces send_file and forward document in a channel

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-BOT_TOKEN=6488885432:Your_token
-ADMIN_IDS=insert_here_admin_ids_with_comma_as_separator
+BOT_TOKEN=INSERT_TOKEN
+ADMIN_IDS=INSERT_ADMIN_IDS
 BANNED_USERS_IDS=6488885079, 3412514351, 54315114532
+CHANNEL_USERNAME=INSET_CHANNEL_USERNAME
 USE_REDIS=False
 
 DB_USER=exampleDBUserName
